RESOLVED FIXED60488
REGRESSION (r85780): Flash of white when a WKView with composited content moves on-screen
https://bugs.webkit.org/show_bug.cgi?id=60488
Summary REGRESSION (r85780): Flash of white when a WKView with composited content mov...
mitz
Reported 2011-05-09 11:46:57 PDT
REGRESSION (r85780): Flash of white when a WKView with composited content moves on-screen
Attachments
Update m_compositingAccordingToProxyMessages when sending DidUpdateBackingStoreState (1.37 KB, patch)
2011-05-09 11:56 PDT, mitz
darin: review+
mitz
Comment 1 2011-05-09 11:56:06 PDT
Created attachment 92818 [details] Update m_compositingAccordingToProxyMessages when sending DidUpdateBackingStoreState
mitz
Comment 2 2011-05-09 11:59:24 PDT
Note You need to log in before you can comment on or make changes to this bug.