<rdar://problem/9005982> REGRESSION (r85780): Flash of white when a WKView with composited content moves on-screen https://bugs.webkit.org/show_bug.cgi?id=60488

Reviewed by Darin Adler.

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::sendDidUpdateBackingStoreState): Update m_compositingAccordingToProxyMessages,
since the DidUpdateBackingStoreState message also changes the compositing state in the proxy.



Canonical link: https://commits.webkit.org/75747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86074 268f45cc-cd09-0410-ab3c-d52691b4dbfc